1998-11-17  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/tapefile.c (lookup_last_reusable_tape): Wrong order
	to shift the tpsave array (untested).

1998-11-17  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* example/amanda.conf.in: document that infofile is supposed to be a
	directory with the default database format
	* docs/FAQ: New questions: `infofile update failed' and `using the
	same host in different configurations'

1998-11-17  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	changer-src/scsi-linux.c (Tape_Ready): typo, the argument Device
	to the SCSI_CloseDevice() is not defined, I changed it to tapedev.

1998-11-17  Brendan M Coffey <bcoffey@connix.com>

	* common-src/stream.c (stream_server): add requested send and receive
	socket size parameters.
	* common-src/stream.h (stream_server): ditto
	* server-src/taper.c (file_reader_side): set a large receive socket
	buffer size.
	* client-src/sendbackup.c (main): set a large send and receive socket
	buffer size for the data path, use defaults for the message and index
	paths.

1998-11-16  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* changer-src/scsi-solaris.c (Tape_Ready): typo in Thomas' patch

1998-11-12  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/infofile.h (get_dumpdate): rename record parameter to info.
	* server-src/infofile.h (get_info): rename record parameter to info.
	* server-src/infofile.h (put_info): rename record parameter to info.
	* server-src/infofile.c (get_dumpdate): rename rec parameter to info.
	* server-src/infofile.c (zero_info): rename ip parameter to info.
	* server-src/infofile.c (get_info): rename record parameter to info.
	* server-src/infofile.c (put_info): rename record parameter to info.
	* server-src/infofile.c (dump_rec): rename r parameter to info.
	* server-src/infofile.c (dump_db): rename record variable to info.
	* server-src/planner.c (last_level): rename ip parameter to info.