@@ -1,3 +1,8 @@
+1998-11-17  Alexandre Oliva  <oliva@dcc.unicamp.br>
+
+	* client-src/sendsize.c: disable HAVE_DUMP_ESTIMATE if SAMBA_CLIENT
+	is defined
+
 1998-11-17  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>
 
 	* server-src/tapefile.c (lookup_last_reusable_tape): Wrong order
